# Hypothesis-Council

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/start-hypothesis-council/: SKILL.md
council/: __init__.py  __main__.py  config.py  grounding.py  openrouter.py  report.py  run.py
examples/: iran-war-theory.txt
examples/demo-run/: raw.json  report.typ
prompts/: member.md  synthesiser.md
